# deb2pg

./: .gitignore  99.dictionary  9999.dictionary  BUILD.md  Cargo.toml  README.md  apt-fakedroot-update.sh  create.sql  explode.py  extensions.py  fs.sql  go.sh  ingest.py  ingest.sh  ingest_package.py  list_source_packages.py  migrate.py  notes.sql  pack.sh  pack_package.py  setup.sh  store.py
apt/: apt-fakedroot-update.sh  list_source_packages.py
catfight/: Cargo.toml
catfight/src/: catfight.rs  copy.rs  lib.rs
catfight/tests/: smoke.rs
deb2pg/: Cargo.toml  __init__.py  explode.py  store.py  write_manifest.py
deb2pg-rs/: Cargo.toml
deb2pg-rs/src/: catfight.rs  copy.rs  main.rs  simplify_path.rs  temps.rs
deb2pg/src/: main.rs
dicts/: 999.dictionary  c.dictionary  conf.dictionary  oddlang.dictionary  text.dictionary  web.dictionary
google/: Dockerfile  Makefile
index/: Cargo.toml
index/src/: find.rs  grep.rs  indexer.rs  lib.rs  names.rs  search.rs  shards.rs  tests.rs  tri.rs
indexstat/: Cargo.toml
indexstat/src/: main.rs
ingest/: Cargo.toml
ingest/src/: deb.rs  dicts.rs  errors.rs  main.rs  simplify_path.rs  store.rs  temps.rs
migrations/: 01-create.sql  migrate.py
reindex/: Cargo.toml  Makefile.index
reindex/src/: main.rs
serve/: Cargo.toml
serve/src/: main.rs
web/: package.json
web/public/: index.html
web/src/: App.js  Blob.js  Paths.js  index.js
