[package]
name = "index"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

[dependencies]
catfight = { path = "../catfight" }
bit-set = "0.4.0"
byteorder = "1.0.0"
error-chain = "0.10.0"
libc = "0.2.21"
lz4 = "1.21.0"
memmap = "0.5.2"
regex-syntax = "0.4.0"
twoway = "0.1.3"

[features]
default = ["nightly"]

nightly = ["twoway/pcmp"]
