[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "index"
version = "0.1.0"

[dependencies]
bit-set = "0.4"
byteorder = "1"
error-chain = "0.11"
libc = "0.2"
lz4 = "1"
memmap = "0.6"
regex-syntax = "0.5"
twoway = "0.1"

[dependencies.catfight]
path = "../catfight"

[features]
default = ["nightly"]
nightly = ["twoway/pcmp"]
