[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "deb2pg-ingest"
version = "0.1.0"

[dependencies]
base32 = "0.3"
byteorder = "1"
error-chain = "0.11"
lz4 = "1"
num_cpus = "1"
postgres = "0.15"
sha2 = "0.6"
tempfile = "2"
tempfile-fast = "0.1"
thread-pool = "0.1"

[dependencies.catfight]
path = "../catfight"

[dependencies.ci-capnp]
path = "../../contentin/ci-capnp"

[dependencies.index]
path = "../index"
