[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "deb3pg-ingest"
version = "0.1.0"

[dependencies]
byteorder = "1"
error-chain = "0.11"
maplit = "1"
postgres = "0.15"
serde_json = "1.0"
sha2 = "0.7"
tempfile = "2"
tempfile-fast = "0.1"
zstd = "0.4"

[dependencies.splayers]
path = "../../splayers"
